<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_sky_blue"
    android:fillViewport="true"
    android:layout_gravity="center"
    android:id="@+id/fragment_email_sign_up_nested_scroll_view"
    tools:context=".ui.view.authenticationfragments.EmailSignUpFragment">

    <LinearLayout
        android:id="@+id/fragment_email_sign_up_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_email_sign_up_create_an_account_text_view"
            style="@style/SignUpScreenCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fragment_email_sign_up_lets_get_to_know_you_text_view"
            style="@style/SignUpScreenGetToKnowYouText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_email_sign_up_first_name_layout"
            style="@style/CladsEditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_email_sign_up_screen_first_name_edit_text"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:paddingStart="@dimen/padding_0dp"
                android:paddingEnd="@dimen/padding_0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_email_sign_up_screen_last_name_layout"
            style="@style/CladsEditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_email_sign_up_screen_last_name_edit_text"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:paddingStart="@dimen/padding_0dp"
                android:paddingEnd="@dimen/padding_0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_email_sign_up_screen_other_name_text_layout"
            style="@style/CladsEditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_email_sign_up_screen_other_name_edit_text"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other_name"
                android:paddingStart="@dimen/padding_0dp"
                android:paddingEnd="@dimen/padding_0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_email_sign_up_screen_account_category_layout"
            style="@style/Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_25dp"
            >

            <AutoCompleteTextView
                android:id="@+id/fragment_email_sign_up_screen_account_category_filled_dropdown"
                style="@style/CladEmailSignUpSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_account_category"
                android:paddingStart="@dimen/padding_0dp"
                android:paddingEnd="@dimen/padding_0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_email_sign_up_screen_email_address_layout"
            style="@style/CladsEditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_email_sign_up_screen_email_address_edit_text"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:paddingStart="@dimen/padding_0dp"
                android:paddingEnd="@dimen/padding_0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_email_sign_up_screen_password_layout"
            style="@style/CladsEditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/off_white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_email_sign_up_screen_password_edit_text"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_0dp"
                android:paddingEnd="@dimen/padding_0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_email_sign_up_screen_confirm_password_layout"
            style="@style/CladsEditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/off_white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_email_sign_up_screen_confirm_password_edit_text"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_0dp"
                android:paddingEnd="@dimen/padding_0dp" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/fragment_email_sign_up_screen_sign_up_button"
            style="@style/SignUpScreenSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_18dp" />



            <TextView
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_24dp"
                android:id="@+id/fragment_email_sign_up_have_an_account_text_view"
                style="@style/CladSignUpScreenHaveAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


</ScrollView>